[metadata]
name = pyDRMetrics
version = 0.0.7
author = Yinsheng Zhang (Ph.D.)
author_email = oo@zju.edu.cn
description = A Python toolkit for dimensionality reduction quality assessment 
long_description = file: README.md # case-sensative
long_description_content_type = text/markdown
url = https://github.com/zhangys11/pyDRMetrics
project_urls =
    Bug Tracker = https://github.com/zhangys11/pyDRMetrics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src